--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
 			<h5 class="titulo">Só de Cenoura</h5>
 
 			<div>
+				<i class="material-icons waves-effect waves-light waves-circle scan-qrcode">camera</i>
 				<i data-activates="submenu" data-gutter="5" 
 					data-constrainwidth="false"
 					class="material-icons waves-effect waves-light waves-circle dropdown-button">more_vert</i>
@@ -84,6 +85,7 @@
 		</div>
 	</div>
 
+	<script src="cordova.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/materialize.min.js"></script>
     <script src="js/app.js"></script>
