--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,7 @@
 			<a class="collection-item waves-effect black-text" >Brigadeiro</a>
 			<a class="collection-item waves-effect black-text" >Açucarado</a>
 		</div>
+		<img src="" id="myImage" />
 	</div>
 
 	<div class="section" id="bebidas">
