--- a/www/index.html
+++ b/www/index.html
@@ -50,6 +50,7 @@
 			<a class="collection-item waves-effect black-text" >Açucarado</a>
 		</div>
 		<img src="" id="myImage" />
+		<textarea id="respostaJson" rows="10"></textarea>
 	</div>
 
 	<div class="section" id="bebidas">
